--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@11ty/eleventy": "^0.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "npx @11/eleventy --serve"
   },
   "repository": {
     "type": "git",
