--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
+# build
+_site/
 # Logs
 logs
 *.log
 npm-debug.log*
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Dependency directories
 node_modules/
@@ -15,6 +14,3 @@ node_modules/
 # dotenv environment variables file
 .env
 .env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
